<resources>
    <string name="app_name">CppProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">About</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_Logout">Logout</string>
    <string name="introduction">

      كثيرا منا من يجد صعوبة في كتابة   البرامج أو انه يعرف
        كل شيء وفاھم لكل مكونات تلك اللغة ولكن لا يعرف كيف يربط بين تلك المعلومات
        , كتلك التي تعرف مكونات كل أكلة وكيفية  تكوينھا  لكنھا  لا تجيد الطبخ اعلم أن الكثير
        منمن سيقرأ ھذه الأسطر يجد أنھا تطبق عليه ولا عجب فانا كنت كذلك يوما ما إذن فأين الحل ..؟
  عندما نُسال سؤال سنقوم بالبداية بتحليل
        السؤال ونحضر متطلباته تم نقوم بربط ھذه المتطلبات مع بعضھا ونكون برنامجا أي شيء شبيه بالخوارزمية لكل حل فعلى
     سبيل   المثال لو جاءنا سؤال يطلب فيه جمع عددين يدخلھما المستخدم فبداية التحليل من السؤال نفھم
     يدخل عددين  لذالك نحتاج إلى متغيرين كل متغير يمثل عدد معين من الذي سوف ندخله وبما انه

       قال يدخلھما المستخدم يجب أن نعمل دالة إدخال من شاشة التنفيذ إلى ھذان المتغيران تم يأتي
      بعدھما من متطلبات السؤال جمع أي لابد من وجود وتعريف متغير ثالث نخزن فيه نتيجة الجمع

      التي سوف نقوم بھا ثم نطبع ھذه النتيجة. ألان بعد تحليل المتطلبات نسلسل الخطوات على ورقة
      بشكل مشابه لكتابة البرنامج
</string>
    <string name="general">منطقة التعريفات العامة و استدعاء مكاتب البرنامج و في هذا المكان يتم تعريف المتغيرات العامة التي سيتم استخدامها في البرنامج بشكل عام اضافة الى استدعاء مكاتب البرنامج و تعريف الدوال ايضا
على سبيل المثال دالتي الطباعة و الادخال (cin , cout)
الموجودة ضمن مكتبة iostream.h
اما الجزء الاخر فهو دالة main
 و هذه الدالة الرئيسية التي يتم كتابة اكواد البرنامج فيها و من الجدير بالذكر انه يجب كتابة الفارزة المنقوطة بنهاية كل سطر برمجي لاعلام البرنامج بنهاية السطر , و هذا مخطط يوضح ما قد سبق ذكره
</string>
    <string name="variables">المتغيرات هي عبارة عن مواقع في الذاكرة يتم تخزين قيم معينة فيها قد تبقى ثابتة او تتغير اثناء تنفيذ البرنامج و اسماء
    المتغيرات تكون مفتوحة حسب رأي المبرمج يمكن ان يسميها اي اسم لكن على شرط الا يكون من الاسماء المحجوزة من قبل النظام مثل (if , while , switch)
    او اي اسم محجوز اخر من قبل المترجم و على الرغم من ان اسماء
    المتغيرات مفتوحة و لكن يجب ان تكون تسميتها منطقية فعلى سبيل المثال ان كان لديك متغير يدل على الوقت فيفضل ان تتم تسميته time
    لتكون قراءة الكود سهلة عند اعادة قرائته بعد فترة طويلة او التعديل عليه و هنا مجموعة من المتغيرات التي يتم استخدامها بكثرة
مع طريقة تعريف كل منها
</string>
    <string name="variables2">و يمكن تعريف اكثر من متغير بسطر واحد و ذلك بوضع فارزة بين اسم كل متغير و الاخر
و من الممكن ايضا اسناد قيمة متغير الى متغير اخر فتصبح بهذا الشكل </string>
    <string name="variables3">فهنا سيقوم المتغير second بأخذ قيمة المتغير first فسيخزن داخل المتغير second القيمة 51 </string>
    <string name="variables4">و الان قم بتعريف متغير من نوع double بأسم number و قم بأعطائه قيمة = 10 :- </string>
    <string name="iostream">و هي دالة تقوم بعرض نواتج العمليات امام المستخدم في شاشة التفيذ و بالشكل الاتي :- </string>
    <string name="iostream2">و الان فلنكتب برنامجنا الاول , و الذي سيكون عبارة عن طبع كلمة (Hi my name is momen shawkat)
على شاشة البرنامج فيكون الكود بالشكل الاتي :-</string>
    <string name="logic">تكتب العمليات الرياضية برمجيا بطريقة مماثلة لكتابتها رياضيا مع تغير طفيف بالرموز الرياضية
        , لاحظ هذا الجدول التوضيحي للعمليات و تمثيلها برمجيا و رياضيا </string>
    <string name="logic2">لاحظ ان التمثيل البرمجي مشابه تقريبا للتمثيل
        الرياضي مع ابدال بعض الرموز بما يكافئها ووضع فارزة منقوطة في نهاية التعبير </string>
    <string name="logic3">مثال:- لو كان لدينا متغيرين من نوع (integer) و كلاهما يحملان قيمة معينة يقوم بادخالها
        المستخدم من شاشة التنفيذ و المطلوب هو جمعهما و عرض الناتج , فسيكون الكود البرمجي بالشكل الاتي </string>
    <string name="logic4">توضيح للخطوات :-\n
    1-تعريف للمكتبة الخاصة بدوال الادخال و الاخراج \n
    2- كتابة الدالة الرئيسية (main) لتنفيذ الكود البرمجي \n
    3-تعريف المتغيرات بسطر واحد متغير للرقم الاول و متغير اخر ليحمل قيمة الرقم الثاني و متغير لتخزن فيه ناتج الجمع \n
    4-ادخال قيم المتغيرين اللذين سيتم جمعهما \n
    5-خزن ناتج الجمع داخل المتغير الثالث \n
    6-عرض الناتج على شاشة التنفيذ \n</string>
    <string name="logic5">هي رموز تستخدم لمعرفة العلاقة بين رقمين و يكون الناتج اما (true) او (false) و هذا جدول يوضح هذه الرموز </string>
    <string name="logic6">هي متغيرات تعرف داخل البرنامج
        بقيمة معينة ثم نغير قيمتها اثناء تنفيذ البرنامج كأن نجعلها تزداد بمقدار معين او تتناقص </string>
    <string name="logic7">لاحظ في هذا الكود عند طباعة قيمة المتغير (x) ستكون القيمة
        المطبوعة هي (1) و ليس (0) و هذا بسبب معامل الزيادة (++) الذي تم استعماله مع المتغير (x) </string>
    <string name="logic8">اما في هذه الحالة ستكون قيمة المتغير (x) هي (1-) و ذلك بسبب وجود معامل النقصان (--) </string>
    <string name="logic9"> ببساطة شديدة (++x) تعني قم بتنفيذ الخطوة الحالية على
        قيمتك السابقة ثم غير قيمتك بعد تنفيذ الخطوة الحالية على سبيل المثال قد تكون قيمة الزيادة هي (1) و قيمته
        في الخطوة السابقة (2) ينفذ الخطوة التي هو بها على انه (2) و عندما ينتقل الى الخطوة اللاحقة تصبح قيمته (3)</string>
    <string name="logic10">أما (x++) تعني قم بتغيير قيمتك السابقة اولا ثم نفذ الخطوة
        التي انت بها فلو اعدنا المثال السابق سيكون بهذا الشكل </string>
    <string name="logic11">و الامر سيان بالنسبة لمعامل النقصان فلا يوجد اختلاف من ناحية طريقة العمل و الهيكلية </string>
    <string name="array">قبل ان نتحدث عن المصفوفات علمنا ان المتغيرات تحجز مكان في الذاكرة تخزن فيه قيمة المتغير اذا فما
        فرق المصفوفات عن المتغيرات , المصفوفات هي مجموعة خلايا متتالية في الذاكرة تحجز لغرض خزن معلومات معينة
        في داخلها كأن نخزن في داخلها أرقام او أحرف و تبقى هذه القيم مخزنة داخل المصفوفة حتى نغلق البرنامج
        و يجب علينا تحديد عدد المواقع التي نحتاجها في بداية البرنامج حتى يحجزها المترجم للمصفوفة و لا يخزن قيم اخرى
        في داخلها و تبقى محجوزة فقط لعناصر المصفوفة و يكون تحديد عدد العناصر و تعريف المصفوفة و نوعها بالشكل التالي .</string>
    <string name="array2">اولا نقوم بتحديد نوع المصفوفة ثم نقوم بتحديد اسم المصفوفة و بين
        قوسين مربعين نحدد عدد الخلايا التي سيتم حجزها من قبل المترجم كما موضح بالمثال اعلاه . </string>
    <string name="array3">و الان كيف لو اردنا الوصول الى موقع معين في داخل المصفوفة و خزن قيمة بداخله ؟ </string>
    <string name="array4">أن عنونة عناصر المجموعة تبدأ من الصفر و هو اول موقع في المصفوفة فلو اردنا خزن قيمة في الموقع
        الاول سنكتب اسم المصفوفة ثم بين قوسين مربعين القيمة (0) و ندخل القيمة التي نريدها بالشكل التالي .</string>
    <string name="array5">كيف نطبع قيمة محدده في داخل المصفوفة ؟</string>
    <string name="array6">لو اردنا طباعة القيمة في الموقع الثاني سيكون الكود بالشكل التالي ...</string>
    <string name="array7">ملاحظة:- ان تسلسل العناصر في المصفوفة يبدأ من
        الصفر كما لاحظت فعليه لو كانت لدينا مصفوفة حجمها (10) فأن اول عنصر تسلسله هو (0) و الاخير سيكون (9)</string>
    <string name="array8">و من الممكن ايضا ادخال القيم للمصفوفة مباشرة اثناء تعريفها و كالتالي .</string>
    <string name="array9">مثال:- مصفوفة احادية لادخال (6) عناصر و طبعها على شاشة التنفيذ </string>
    <string name="array10">بمثل هذا النوع من الامثلة ليس
        من المنطقي ادخال كل قيمة على حدى الامر من الممكن ان يكون سهلا في هذا المثال بسبب ان حجم المصفوفة (6)
        ولكن فرضا لو كانت لدينا مصفوفة حجمها (100) هل سنقوم بأدخال هذه العناصر واحدة تلو الاخرى ؟ بالتأكيد لا ,
        اذن ما الحل ؟ الحل هو بأستعمال الجمل التكرارية التي سبق
        و قمنا بدراستها و على وجه الخصوص سنقوم بأستعمال (for) و كما موضح في المثال الاتي .</string>
    <string name="array11">توضيح:- \n
    - قمنا بتعريف المصفوفة و تحديد حجمها \n
    - كتابة العبارة التكرارية (for) و اعطاء قيمة اولية للعداد و هي (0) ثم حددنا شرط الاستمرارية على ان يكون العداد اقل من (6) و الذي هو حجم المصفوفة \n
    - الزيادة بمقدار (1) في كل مرة \n
    - ادخال القيمة عن طريق شاشة التنفيذ بأستعمال (cin) و التي سيتم ادخالها في داخل المصفوفة \n
    - ادخال القيم سيكون عن طريق العداد (i) و الذي سيكون في اول مرة صفر فسيتم ادخال القيمة في الموقع الاول ثم تكون قيمة (i) واحد فسيتم ادخال القيمة في الموقع الثاني و هكذا لحين الوصول الى اخر قيمة و هي (5)\n
    - و أما بالنسبة لعملية الطباعة فستسير بنفس الخطوات تماما \n
    </string>
    <string name="functions">تطرقنا فيما مضى على عدد من الدوال الخاصة بلغة (++c) و تعلمنا طريقة استخدامها و منها دالة (pow) التي
        تستخدم لايجاد قيمة رقم مرفوع الى قوى , و هذه الدوال كلها مصممة من قبل مصممي لغة
        (++c) لكي يسهل العمل على المبرمجين فبدلا من ان يكتب المبرمج عدد من الاسطر البرمجية
        لايجاد قيمة رقم مرفوع لقوة معينة يقوم بأستعمال هذه الدالة التي
        ستوفر عليه الكثير من الوقت و من فوائد الدوال هو تقليل الاسطر البرمجية و منع تكرار الاكواد لاكثر من مرة ايضا نستطيع بناء
        دوال بنفسنا لكي نمنع تكرار اسطر برمجية معينة و نزيد من سهولة الكود البرمجي و امكانية قرائته من قبل المبرمجين الاخرين . </string>
    <string name="functions2">الهيكلية العامة لبناء الدوال:-</string>
    <string name="functions3">اولا:- (type) هو نوع القيمة التي سترجعها الدالة بعد ان تنتهي من عملها لان الدوال تكون على نوعين \n
    الاولى تعيد قيمة بعد استدعائها و تكون بالشكل التالي و يجب ان تحتوي على (return) لتعيد قيمة للبرنامج </string>
    <string name="functions4">و بما انها تعيد قيمة فيجب خزن هذه القيمة بمتغير من نفس نوع الدالة اي لو كان نوع الدالة
        هو (integer) فيجب ان يكون نوع المتغير (result) هو (integer) لتخزن فيه القيمة المرجعة من تنفيذ الدالة .</string>
    <string name="functions5">أما النوع الثاني لا تعيد اي قيمة للبرنامج , تستدعى لتنفذ ما في داخلها و ينتهي كل شيء و لا تحتوي في
        داخلها على (return) لأنها لا تعيد اي قيمة و طريقة استدعائها في البرنامج فقط نكتب اسم الدالة بالشكل التالي .</string>
    <string name="functions6">ثانيا:- (name) هو اسم الدالة و يمكن ان يكون اي اسم
        لكن للوضوح اجعل اسم الدالة يدل على عملها فمثلا لو قمت ببناء دالة لجمع رقمين قم بتسميتها (sum) ليكون واضحا .</string>
    <string name="functions7">ثالثا:- (parameters) هي متغيرات يتم ارسالها الى
        الدالة لنمثلها داخل الدالة لغرض تنفيذ العمل المطلوب و تقوم الدالة بأستقبال المتغيرات المرسلة حسب الترتيب . </string>
    <string name="functions8">مثال:- لنكتب برنامج يقوم بجمع رقمين لكن باستعمال الدوال .</string>
    <string name="functions9">توضيح:- \n
    اولا:- قمنا بتعريف المتغيرات التي سيتم جمعها و المتغير الذي سيحتوي على ناتج جمعهما . \n
    ثانيا:- ادخال القيم للمتغيرات بأستعمال دالة الادخال و عن طريق شاشة التنفيذ . \n
    ثالثا:- استدعاء الدالة بأسمها و تمرير المتغيرين الذين قمنا بأدخال قيمتها بداخل الدالة و من ثم خزن القيمة المرجعة من تنفيذ الدالة داخل المتغير (result) . \n
   رابعا:- عند وصول البرنامج الى الخطوة التي تم استدعاء الدالة فيها سيتوقف و من ثم ينتقل الى تنفيذ الاكواد البرمجية التي داخل الدالة التي قمنا بكتابتها . \n
   خامسا:-البدء بتنفيذ الاكواد التي بداخل الدالة (sum) و هي عبارة عن ثلاث متغيرات (var1 , var2) سيمثلان القيم التي تم ارسالها مسبقا من الدالة الرئيسية و اللذان سيتم جمعهما و خزن الناتج بداخل المتغير (result) . \n
     سابعا:- العودة الى الدالة الرئيسية بعد اتمام تنفيذ الدالة (sum) و طباعة القيمة المستلمة في داخل المتغير (result) . \n
    </string>
    <string name="functions10">و هي الدوال التي لا تحتوي على قيمة مرجعة الى البرنامج اي ننفذ ما في داخلها و لا تعيد اي قيمة الى البرنامج قد تستقبل قيم و لكنها لا تعيد اي قيمة . </string>
    <string name="functions11">مثال:- برنامج يقوم بطباعة العبارة (hello world) . </string>
    <string name="functions12">ملاحظة:- (void) تعني بأن هذه الدالة ليس لها نوع محدد و انها لا تقوم بأرجاع اي قيمة .</string>
</resources>