<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lessons.Introduction">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/intoduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="#38F7F7F7"
        android:text="المصفوفات احادية الابعاد"
        android:textAlignment="center"
        android:textColor="#FF7CCBEA"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/array"
                android:layout_marginTop="5dp"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/array"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/array2"
                android:layout_marginTop="5dp"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/array3"
                android:layout_marginTop="7dp"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/array4"
                android:layout_marginTop="5dp"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/array2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/array5"
                android:layout_marginTop="7dp"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/array6"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/array3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:text="@string/array7"
                android:layout_marginTop="5dp"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/array8"
                android:layout_marginTop="5dp"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/array4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/array9"
                android:layout_marginTop="15dp"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/array10"
                android:layout_marginTop="5dp"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="272dp"
                android:src="@drawable/array5" />

            <TextView
                android:text="@string/array11"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>






        </LinearLayout>






    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>