<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lessons.Introduction">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/intoduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="#38F7F7F7"
        android:text="الدوال"
        android:textAlignment="center"
        android:textColor="#FF7CCBEA"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/functions"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/functions2"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/functions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/functions3"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/functions2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/functions4"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/functions5"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/functions3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/functions6"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/functions7"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/functions8"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="298dp"
                android:src="@drawable/functions4" />

            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/functions9"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@android:color/holo_red_dark"
                android:background="#8C0057BA"
                android:text="الدوال بدون نوع "
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/functions10"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/functions11"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/functions5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/functions12"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/ColorBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </LinearLayout>






    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>